# cmd/api/main.go
@@ -11,9 +11,9 @@
 //	@license.name				Apache 2.0
 //	@license.url				http://www.apache.org/licenses/LICENSE-2.0.html
 //
-//	@host						localhost:8080
+//	@host						ocpctl.mg.dog8code.com
 //	@BasePath					/api/v1
-//	@schemes					http https
+//	@schemes					https http
 //
 //	@securityDefinitions.apikey	BearerAuth
 //	@in							header
